--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,12 +10,13 @@ export(build.designmatrix.regions)
 export(build.designmatrix.single)
 export(cell_type_info_from_clusters)
 export(cell_type_info_from_de)
+export(cell_type_info_from_singlets)
 export(choose_sigma_c)
 export(convert.old.RCTD)
 export(count_cell_types)
 export(create.RCTD)
+export(create.RCTD.noref)
 export(create.RCTD.replicates)
-export(create.RCTD.unsupervised)
 export(create_RCTD_plots)
 export(exvar.celltocell.interactions)
 export(exvar.point.density)
@@ -29,7 +30,7 @@ export(get_standard_errors)
 export(import_weights)
 export(initialize.clusters)
 export(initialize.subtypes)
-export(iter.optim)
+export(iterOptim)
 export(make_all_de_plots)
 export(make_de_plots_genes)
 export(make_de_plots_quant)
@@ -67,7 +68,8 @@ export(run.CSIDE.replicates)
 export(run.CSIDE.single)
 export(run.RCTD)
 export(run.RCTD.replicates)
-export(run.unsupervised)
+export(run.RICE)
+export(run.RICE.subtypes)
 export(save.CSIDE.replicates)
 export(set_cell_types_assigned)
 export(set_likelihood_vars)
