--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(fitPixels)
 export(get_cell_type_info)
 export(get_de_genes)
 export(get_doublet_weights)
+export(get_marker_genes)
 export(get_norm_ref)
 export(get_standard_errors)
 export(import_weights)
